[package]
name = "wrs"
version = "0.1.0"
edition = "2024"
license = "MIT"
license-file = "LICENSE.md"
keywords = ["wayland", "compositor"]
description = "An implementation of the Wayland protocol in pure Rust"
readme = "README.md"
repository = "https://github.com/xero-lib/wrs"

[dependencies]
ash = "0.38.0"
nix = { version = "0.29.0", features = ["socket"] }
